fix: add dana payment & fix date

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 											<span>
 												08.00 - Selesai </span>
 										</div>
-										<div class="event-col"> <i class="icon-calendar"></i> <span>Selasa, 8
-												Mei 2024</span> </div>
+										<div class="event-col"> <i class="icon-calendar"></i> <span>Selasa, 18
+												Juni 2024</span> </div>
 										<p>
 											<label style="font-weight:normal; font-size:22px;">
 												Kediaman Mempelai Wanita </label>
@@ -234,8 +234,8 @@
 											<i class="icon-clock"></i> <span>
 												10.00 - Selesai </span>
 										</div>
-										<div class="event-col"> <i class="icon-calendar"></i> <span>Selasa, 8
-												Mei 2024</span> </div>
+										<div class="event-col"> <i class="icon-calendar"></i> <span>Selasa, 18
+												Juni 2024</span> </div>
 										<p>
 											<label style="font-weight:normal; font-size:22px;">
 												Kediaman Mempelai Wanita </label>
@@ -315,6 +315,24 @@
 						</ul>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="fh5co-bg payments" style="background-color:#944D31;">
+			<div class="col-md-8 col-md-offset-2 text-center animate-box  fadeInUp animated-fast">
+				<h1 class="color-putih" style="margin-top:30px;">Love Gift</h1>
+
+				<p style="color:#fff;">
+					Tanpa mengurangi rasa hormat, bagi anda yang ingin memberikan tanda kasih untuk kami, dapat melalui :</p>
+			</div>
+
+			<div class="payment">
+				<img
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/Logo_dana_blue.svg/2560px-Logo_dana_blue.svg.png"
+					alt="Dana">
+				<p>
+					No Dana 085659756056 <br> a.n Laela Komalasari
+				</p>
 			</div>
 		</div>
 
